--- a/notebooks/etl.ipynb
+++ b/notebooks/etl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔄 STEP 2: TRANSFORMING & NORMALIZING\n",
+      "🔄 STEP 4: TRANSFORMING & NORMALIZING\n",
       "========================================\n",
       "\n",
       "🔧 Normalizando clients...\n",
@@ -206,11 +206,11 @@
       "🔧 Normalizando events...\n",
       "[Metadata] events: 15000 → 15000 after dropping missing keys\n",
       "[Metadata] events: 0/15000 invalid type set to 'unknown'\n",
-      "[Metadata] events: 0/15000 invalid currency codes set to XXX\n",
+      "[Metadata] events: 0/15000 invalid currency codes set to 'XXX'\n",
       "[Metadata] events: 0/15000 invalid status code set to 'unknown'\n",
       "[Metadata] events: 0/15000 invalid error code set to 'unknown'\n",
-      "[Metadata] events: 65/15000 invalid origin_country codes set to 'XX'\n",
-      "[Metadata] events: 79/15000 invalid destination_country codes set to 'XX'\n",
+      "[Metadata] events: 0/15000 invalid origin_country codes set to 'XX'\n",
+      "[Metadata] events: 0/15000 invalid destination_country codes set to 'XX'\n",
       "\n",
       "🔧 Normalizando retry_logs...\n",
       "[Metadata] retry_logs: 1500 → 1500 after dropping missing keys\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,18 +288,11 @@
     "\n",
     "print(f\"\\n🎯 ¡Todos los datos procesados guardados en {DATA_PROCESSED}!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
